<resources>
    <string name="app_name">Final Year Project</string>
    <string name="app_title">NEAR</string>
    <string name="login_button">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="search_paragraph">Please enter your search terms:</string>
    <string name="button_myBio">My Bio</string>
    <string name="button_myGroups">My Groups</string>
    <string name="button_myInterests">My Interests</string>
    <string name="button_signOut">Sign Out</string>
    <string name="title_bio">Bio</string>
    <string name="button_updateBio">Update Bio</string>
    <string name="header_home">Your events:</string>
    <string name="bio_paragraph">Your biography:</string>
    <string name="bio_load">Bio loading...</string>
    <string name="event_details">EVENT DETAILS:</string>
    <string name="button_viewGroups">View Groups</string>
    <string name="event_groups">GROUPS ATTENDING:</string>
    <string name="button_createGroup">Create New Group</string>
    <string name="create_group_header">Enter the details for your group:</string>
    <string name="create_group_title">Group Title:</string>
    <string name="create_group_description">Group Description:</string>
    <string name="create_group_maxPeople">Maximum No. of People</string>
    <string name="create_group_button">Create Group</string>
    <string name="button_joinGroup">Request to Join</string>
    <string name="request_message">Enter your message:</string>
    <string name="button_sendRequest">Send Request</string>
    <string name="button_sendMessage">Send Message</string>
    <string name="button_viewRequests">View Join Requests</string>
    <string name="view_userBio_prompt">Click to view this users bio</string>
    <string name="create_user_header">Please enter your details to create an account:</string>
</resources>