<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.groupDetail.GroupDetailFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <TextView
                android:id="@+id/group_detail_eventVenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="EVENT VENUE"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/group_detail_eventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:text="EVENT TITLE"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/group_detail_eventDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="EVENT DESCRIPTION" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="5dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/group_detail_groupTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:ellipsize="end"
                        android:scrollHorizontally="true"
                        android:text="GROUP TITLE"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/group_detail_groupAttendees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/group_detail_groupTitle"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:drawablePadding="2dp"
                        android:ellipsize="end"
                        android:text="GROUP ATTENDEES"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/group_detail_groupDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/group_detail_groupAttendees"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:drawablePadding="2dp"
                        android:ellipsize="end"
                        android:scrollHorizontally="true"
                        android:text="GROUP TEXT" />

                    <TextView
                        android:id="@+id/group_detail_groupCreator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/group_detail_groupDesc"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="2dp"
                        android:ellipsize="end"
                        android:text="GROUP CREATOR"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/group_detail_joinButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/group_detail_groupCreator"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/button_joinGroup" />

                    <LinearLayout
                        android:id="@+id/group_detail_expandingLL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/group_detail_joinButton"
                        android:visibility="gone"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/group_detail_messageHeader"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/request_message"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/group_detail_enterMessage"
                            android:layout_width="match_parent"
                            android:layout_height="170dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/edit_text_border"
                            android:ems="10"
                            android:gravity="top"
                            android:hint="Message"
                            android:inputType="textMultiLine"
                            android:minHeight="48dp"
                            android:padding="5dp" />

                        <Button
                            android:id="@+id/group_detail_sendButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:text="@string/button_sendRequest" />

                    </LinearLayout>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>